CVS:
    On conflict, show start time and link to day/week/month views (redinger)
    Link each search result start time to entry's day view (bernd, beranak)

CVS: Branch Merge (2001-02-24 ljb):
    Incorporated all changes from branch mrbs-0-9-1xp into CVS trunk.
    Undoes post-branch change (0.9.2) to remove "weekstarts" function.
    Fix undefined variable warning $edit_type in edit_entry.php

Version 0.9.2 (Fri Feb  9 20:09:42 GMT 2001)
	Remove "weekstarts" functionality

Branch mrbs-0-9-1xp (2001-02-13 daniel):
    Added $Id$ tags to all files.

Branch mrbs-0-9-1xp (2001-02-10 ljb):
    For PHP4, rename *.php3 to *.php and changed all links.
    Major changes for database support for PostgreSQL:
        Original tables.sql renamed tables.my.sql for MySQL.
        Move sample data from tables.sql to sample-data.sql.
        New tables.pg.sql to build tables for PostgreSQL.
        New destroy.pg.sql to delete PostgreSQL tables and sequences.
        New grant.pg.sql - edit this and run to grant PostgreSQL rights.
        Replaced connect.inc with mysql.inc and pgsql.inc.
        New variable in config.inc "$dbsys" selects "mysql" or "pgsql".
        Renamed variables in config.inc to replace "mysql_" prefix with "db_".
        New wrapper funtions (see README.sqlapi) to encapsulate database calls.
        New pgsql.inc provides PostgreSQL implementation, and connects.
        New mysql.inc provides MySQL implementation, and connects.
        Rewrote all database calls to use wrapper functions.
        Rewrote all SQL statements to be standards-compliant, where possible.
            Used new wrapper routines where non-standard SQL is needed.
            Replace LEFT JOIN sequence with predicate-based joins.
        Changes to all error handling to ensure errors are properly reported.
    New week.php for Week View. (Experimental)
    New month.php for Month View. (Experimental)
    Added rows of links in trailer.inc to new month and week views.